
  (thanks Ronny Pfannschmidt) 

- Funcarg factories can now dynamically apply a marker to a 
  test invocation.  This is for example useful if a factory
  provides parameters to a test which are expected-to-fail: 

    def pytest_funcarg__arg(request):
        request.applymarker(py.test.mark.xfail(reason="flaky config"))
        ...

    def test_function(arg):
        ...

Bug fixes / Maintenance
++++++++++++++++++++++++++

- refine --pdb: ignore xfailed tests, unify its TB-reporting and 
  don't display failures again at the end.
- fix assertion interpretation with the ** operator (thanks Benjamin Peterson)
- fix issue105 assignment on the same line as a failing assertion (thanks Benjamin Peterson)
- fix issue104 proper escaping for test names in junitxml plugin (thanks anonymous)
- fix issue57 -f|--looponfail to work with xpassing tests (thanks Ronny)
- fix issue92 collectonly reporter and --pastebin (thanks Benjamin Peterson)
- fix py.code.compile(source) to generate unique filenames 
- fix assertion re-interp problems on PyPy, by defering code 
  compilation to the (overridable) Frame.eval class. (thanks Amaury Forgeot)
- fix py.path.local.pyimport() to work with directories
- streamline py.path.local.mkdtemp implementation and usage
- don't print empty lines when showing junitxml-filename
- add optional boolean ignore_errors parameter to py.path.local.remove
- fix terminal writing on win32/python2.4 
- py.process.cmdexec() now tries harder to return properly encoded unicode objects 
  on all python versions
- install plain py.test/py.which scripts also for Jython, this helps to
  get canonical script paths in virtualenv situations
- make path.bestrelpath(path) return ".", note that when calling 
  X.bestrelpath the assumption is that X is a directory. 
- make initial conftest discovery ignore "--" prefixed arguments 
- fix resultlog plugin when used in an multicpu/multihost xdist situation 
  (thanks Jakub Gustak) 

Changes between 1.3.0 and 1.3.1