@@ -84,6 +84,7 @@ def test_capturing_unicode(testdir, method):
     else:
         obj = "u'\u00f6y'"
     testdir.makepyfile("""
+        # coding=utf8
         # taken from issue 227 from nosetests
         def test_unicode():
             import sys
